contains ugly version and a slightly better html prep

--- a/twp/twp-profile.html
+++ b/twp/twp-profile.html
@@ -17,6 +17,7 @@
     <a href="#table">Table</a> |
     <a href="#coda">Coda</a>
   </nav>
+  <a href = "index.html">Click me to go back to the main page!</a>
 
   <!-- Part I + II: headings/paragraphs + section IDs -->
   <h2 id="preface">Preface – Why I track</h2>
@@ -56,19 +57,29 @@
     A large number of objects we “throw out” fall under this umbrella where items exist in a gap where they have meaning,
     then lose it and then are thrown out. This week had a lot of items stuck in that gap.
   </p>
+  <h3 id="subhead1">The cute and cuddly</h3>
   <p>
     One group of items this week were objects I kept mostly for comfort, decoration, or the vibe they gave off. The dinosaur plushie is a good example:
     it’s easy to keep because it’s cute, but it’s worn and torn now and doesn’t feel worth holding onto.
     The alien dog plush fits into the same category, except it’s also too large, so it takes up space without actually being used.
     The glossy universe-cat print belongs here too. It’s still funny, but it doesn’t match what I want my space to look like anymore,
-    which makes it feel like it’s from an older version of my room.
+    which makes it feel like it’s from an older version of my room. I think keeping cute stuffed animals like this is fine,
+    but it makes more sense under the following scenarios.
   </p>
+  <ul>
+    <li>Meaningful gift from someone you care about</li>
+    <li>You really find the stuffed animal cute</li>
+    <li>Giving enough meaning to the object to continue taking care of it and treating it with care</li>
+    <li>For example: the alien dog is cute, but large and a bit old now so it makes more sense to give it away in my opinion</li>
+  </ul>
+  <h3 id="subhead2">The ones who stopped working</h3>
   <p>
     Another group this week was made up of things that stopped doing their job. The gym wrist wraps stretched out,
     and once they stopped providing real support, they weren’t useful anymore.
     The broken charger fits here too: it’s the kind of thing you only notice when it fails.
     When something like that stops working, keeping it around doesn’t give it a second life.
   </p>
+  <h3 id="subhead3">The hollow containers</h3>
   <p>
     The last group was made up of items that were finished, replaced, or kept out of habit. The creatine tub is simple, it ran out,
     so the container didn’t have a purpose anymore. The can opener was replaced with a better one, which made the old one unnecessary.
@@ -80,12 +91,10 @@
 
   <h2 id="gallery">Gallery – The nine items of the week</h2>
 
-  <!-- Requirement: Ordered list (ol) -->
   <ol>
     <li>
       <h3>Dinosaur Plushie Squished</h3>
-      <!-- Path fix: from /SWebAuth/twp/ to /SWebAuth/images/ -->
-      <img id="img1" src="../images/img1.jpg" alt="Dinosaur Plushie Squished" />
+        <img id="img1" src="../images/img1.jpg" alt="Dinosaur Plushie Squished" />
       <p>Worn and torn now; no longer comforting to keep around.</p>
     </li>
 
@@ -143,11 +152,11 @@
   <h2 id="table">Table of Item Data</h2>
   <p>To be added...</p>
   <ul>
-    <li>More facts will be added here later.</li>
+    <li>Some of the fun facts from before will also be added here.</li>
     <li>This is just a placeholder list for now.</li>
   </ul>
 
-  <!-- Empty table placeholder (table element included as required) -->
+  <!-- table placeholder (not required to be filled in n stuff) -->
   <table border="1">
     <tr>
       <th>Item</th>
