--- a/twp/twp-profile.html
+++ b/twp/twp-profile.html
@@ -2,191 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="./css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Trash of the Week – Week 28</title>
+  <title>Item of the weeK!</title>
 </head>
 <body>
+  <div class = "wrapper">
+  <header class="site-header">
+    <nav class="site-nav">
+      <!-- home page -->
+      <a href="twp-main.html">Home</a>
 
-  <h1>Week 28 - The stuffed retiring</h1>
+      <!-- profile page -->
+      <a href="twp-profile.html" aria-current="page">Profile</a>
+    </nav>
+  </header>
 
-  <!-- Part II: In-page navigation menu (goes directly under h1) -->
-  <nav>
-    <a href="#preface">Preface</a> |
-    <a href="#overview">Overview</a> |
-    <a href="#gallery">Gallery</a> |
-    <a href="#table">Table</a> |
-    <a href="#coda">Coda</a>
+  <h1>Item of the week: Dinosaur Plushie</h1>
+  <a id="top"></a>
+
+  <!-- ADDED: Page nav under the H1 -->
+  <nav class="page-nav">
+    <a href="#description">Description</a> |
+    <a href="#anecdote">Anecdote</a> |
+    <a href="#funfacts">Fun Facts</a>
   </nav>
-  <a href = "index.html">Click me to go back to the main page!</a>
 
-  <!-- Part I + II: headings/paragraphs + section IDs -->
-  <h2 id="preface">Preface – Why I track</h2>
+  <img id="img1drawing" src="../images/img1.jpg" alt="Dinosaur Plushie Squished" />
+  <img id="img1anecdotedrawing" src="../images/img1anecdote.jpg" alt="Dinosaur Plushie Squished" />
+  <h2 id = "description">Descrption</h2>
   <p>
-    I started recording what I throw away each week because I realized I don’t notice the moment most objects “end.”
-    To elaborate, the meaning behind items don’t disappear when they stop being useful, rather they get pushed back into spots that are forgotten,
-    gaining dust on them. Sometimes an item is left sitting with no use and it’s done to the point where you even forget its place.
+    The dinosaur plushie was a gift a long time ago from a good friend of mine. The plushie unfortunately has endured a lot of wear and tear so 
+it's become a bit unfortunate that I have to throw it out. However, it's not as if it's completely ruined and I think <a href="https://en.wikipedia.org/wiki/Donation" target="_blank" rel="noopener">donating</a> it for someone
+to use a cute little plushie to have in their room is the right call.
   </p>
   <p>
-    This project is documenting my own experience of discarding and how I want to see my things “end”.
-    Rather than just discarding my items I use the weekly descriptions as records to keep information about the project,
-    without needing picture perfect measurements or notes.
+    The plushie is very soft ... sort of like the <a href="https://en.wikipedia.org/wiki/Squishmallows" target="_blank" rel="noopener">Squishmallows</a> ...
+
   </p>
   <p>
     It’s more of a weekly inventory of small decisions: what I keep, what I replace, and what I hold onto for reasons that aren’t practical.
   </p>
-  <p>
-    Creating this miniature blog is another reason why I enjoy sharing it. Knowing that someone might come across the way I discard my items
-    and give them what I consider a proper end might encourage them to do the same for objects that don’t deserve to end up in some forgotten corner of a room.
-  </p>
-  <p><a href="#">Back to top</a></p>
+  <p><a href="#top">Back to top</a></p>
+  
+  
 
-  <h2 id="overview">Overview – Patterns I noticed</h2>
-  <p>
-    This week of discarding felt like a continuation of the same problem I wrote about in the Preface: objects don’t really “end”
-    when they stop being useful. They end when I finally notice them again.
-  </p>
-  <p>
-    Most of what I got rid of this week wasn’t sudden trash, it was stuff that had been pushed back, left sitting, and slowly turned into background clutter.
-    When I looked at everything together, it didn’t feel random. It felt like proof that I keep items longer than I realize, mostly because it’s easy to forget them.
-  </p>
-  <p>
-    What stood out to me is that disposal is rarely one clean decision. It’s usually a slow process: I stop using something,
-    I leave it somewhere “for now,” and then it sits there until I either replace it or get tired of seeing it.
-  </p>
-  <p>
-    A large number of objects we “throw out” fall under this umbrella where items exist in a gap where they have meaning,
-    then lose it and then are thrown out. This week had a lot of items stuck in that gap.
-  </p>
-  <h3 id="subhead1">The cute and cuddly</h3>
-  <p>
-    One group of items this week were objects I kept mostly for comfort, decoration, or the vibe they gave off. The dinosaur plushie is a good example:
-    it’s easy to keep because it’s cute, but it’s worn and torn now and doesn’t feel worth holding onto.
-    The alien dog plush fits into the same category, except it’s also too large, so it takes up space without actually being used.
-    The glossy universe-cat print belongs here too. It’s still funny, but it doesn’t match what I want my space to look like anymore,
-    which makes it feel like it’s from an older version of my room. I think keeping cute stuffed animals like this is fine,
-    but it makes more sense under the following scenarios.
-  </p>
-  <ul>
-    <li>Meaningful gift from someone you care about</li>
-    <li>You really find the stuffed animal cute</li>
-    <li>Giving enough meaning to the object to continue taking care of it and treating it with care</li>
-    <li>For example: the alien dog is cute, but large and a bit old now so it makes more sense to give it away in my opinion</li>
-  </ul>
-  <h3 id="subhead2">The ones who stopped working</h3>
-  <p>
-    Another group this week was made up of things that stopped doing their job. The gym wrist wraps stretched out,
-    and once they stopped providing real support, they weren’t useful anymore.
-    The broken charger fits here too: it’s the kind of thing you only notice when it fails.
-    When something like that stops working, keeping it around doesn’t give it a second life.
-  </p>
-  <h3 id="subhead3">The hollow containers</h3>
-  <p>
-    The last group was made up of items that were finished, replaced, or kept out of habit. The creatine tub is simple, it ran out,
-    so the container didn’t have a purpose anymore. The can opener was replaced with a better one, which made the old one unnecessary.
-    The empty cologne bottle fits the same pattern: it’s finished and keeping it doesn’t change that.
-    The sloth keychain is the most personal example in this group. It used to mean something, but I haven’t used it in a long time and leaving it in a drawer
-    felt like the same “pushed back and forgotten” ending that this project is trying to prevent.
-  </p>
-  <p><a href="#">Back to top</a></p>
+  <h2 id = "anecdote">Anecdote</h2>
+  <p>This tiny plushie has been a member of stuffed plushie collection along side a sloth and another
+    variety of animals. However, last thursday I realized how worn and torn it's become and that it no longer has the meaning it used to, but
+    j... just throwing it out felt cruel. I started thinking about <a href="https://en.wikipedia.org/wiki/Textile_recycling" target="_blank" rel="noopener">textile recycling</a> or regifting it instead.
 
-  <h2 id="gallery">Gallery – The nine items of the week</h2>
-
-  <ol>
-    <li>
-      <h3>Dinosaur Plushie Squished</h3>
-        <img id="img1" src="../images/img1.jpg" alt="Dinosaur Plushie Squished" />
-      <p>Worn and torn now; no longer comforting to keep around.</p>
-    </li>
-
-    <li>
-      <h3>Alien Dog Plush</h3>
-      <img id="img2" src="../images/img2.jpg" alt="Alien Dog Plush" />
-      <p>Too large for my space; it became storage more than something I enjoyed.</p>
-    </li>
-
-    <li>
-      <h3>Universe Cat Print (Glossy)</h3>
-      <img id="img3" src="../images/img3.jpg" alt="Universe Cat Print (Glossy)" />
-      <p> Aesthetic phase; doesn’t match what I want displayed anymore.</p>
-    </li>
-
-    <li>
-      <h3>Gymreaper Wrist Wraps</h3>
-      <img id="img4" src="../images/img4.jpg" alt="Gymreaper Wrist Wraps" />
-      <p>Stretched out; no longer supportive.</p>
-    </li>
-
-    <li>
-      <h3>Empty Creatine Tub</h3>
-      <img id="img5" src="../images/img5.jpg" alt="Empty Creatine Tub" />
-      <p>Finished; keeping the container was just taking up space.</p>
-    </li>
-
-    <li>
-      <h3>Can Opener</h3>
-      <img id="img6" src="../images/img6.jpg" alt="Can Opener" />
-      <p>Replaced with a better one; redundant.</p>
-    </li>
-
-    <li>
-      <h3>Empty Cologne</h3>
-      <img id="img7" src="../images/img7.jpg" alt="Empty Cologne" />
-      <p>Finished; I’d rather keep space for items I use.</p>
-    </li>
-
-    <li>
-      <h3>Sloth Keychain</h3>
-      <img id="img8" src="../images/img8.jpg" alt="Sloth Keychain" />
-      <p>Used to mean something, but I haven’t used it in a long time.</p>
-    </li>
-
-    <li>
-      <h3>Broken Charger</h3>
-      <img id="img9" src="../images/img9.jpg" alt="Broken Charger" />
-      <p>Stopped working; no reason to keep it.</p>
-    </li>
-  </ol>
-
-  <p><a href="#">Back to top</a></p>
-
-  <h2 id="table">Table of Item Data</h2>
-  <p>To be added...</p>
-  <ul>
-    <li>Some of the fun facts from before will also be added here.</li>
-    <li>This is just a placeholder list for now.</li>
-  </ul>
-
-  <!-- table placeholder (not required to be filled in n stuff) -->
-  <table border="1">
-    <tr>
-      <th>Item</th>
-      <th>Weight</th>
-      <th>Cost</th>
-      <th>How acquired</th>
-      <th>Location kept</th>
-      <th>Time owned</th>
-      <th>Mode of disposal</th>
-      <th>Material</th>
-    </tr>
-  </table>
-
-  <p><a href="#">Back to top</a></p>
-
-  <h2 id="coda">Coda - Final thoughts</h2>
-  <p>
-    This week felt like clearing out the quiet leftover things I didn’t dislike enough to throw away immediately but also didn’t actively choose to keep.
-    Putting them into a single gallery makes it obvious how often “future use” is just a way of postponing a decision.
-  </p>
-  <p>
-    Next week, I want to pay attention to what gets discarded without any hesitation versus what I keep negotiating with myself about.
-    If you’ve been documenting your own weekly clutter or have thoughts about what counts as “waste,” feel free to share them.
-  </p>
-  <p><a href="#">Back to top</a></p>
-
-  <p>
-    More on the idea of “waste” as a concept:
-    <a href="https://en.wikipedia.org/wiki/Waste" target="_blank" rel="noopener">Wikipedia: Waste</a>
   </p>
 
+  <p>I decided to do something good with the plushie if I were to remove it from my collection instead, so I will regift it to another person
+    who wants it and deserves it
+  </p>
+  
+  <p><a href="#top">Back to top</a></p>
+
+  <h2 id = "funfacts">Fun Facts</h2>
+  
+  <h3>Fun Fact #1</h3>
+  <p>
+  Most plushies are stuffed with polyester fiberfill (often called Poly-Fil), because it’s 
+  lightweight, washable, and holds shape pretty well. The downside is that polyester fiberfill 
+  is plastic-based, so it doesn’t break down like natural fibers. <a href="https://woolery.com/blogs/the-woolery-blog/our-favorite-choices-for-natural-stuffing-for-pillows-and-plush-toys">(Source)</a>
+  </p>
+
+  <h3>Fun Fact #2</h3>
+  <p>
+  In the U.S., many toys are expected to meet the ASTM F963 toy safety standard, but not every 
+  section applies to every toy. Manufacturers are supposed to figure out which parts of the standard 
+  match their specific product (like small-parts or mechanical hazards). (Source) <a href="https://www.cpsc.gov/Business--Manufacturing/Business-Education/Toy-Safety">(Source)</a>
+  </p>
+
+  <h3>Fun Fact #3</h3>
+  <p>
+  Stuffed animals usually can’t go in normal curbside recycling, but some textile recycling 
+  drop-offs accept them as fabric-based items. New York City’s sanitation guidance even lists 
+  “stuffed animals” as something some textile recycling sites may take. (Source) <a href="https://www.nyc.gov/site/dsny/collection/get-rid-of/clothing-household-fabrics-accessories.page">(Source)</a>
+  </p>
+  <p><a href="#top">Back to top</a></p>
+  </div>
 </body>
 </html>
