--- a/twp/twp-profile.html
+++ b/twp/twp-profile.html
@@ -10,6 +10,9 @@
   <div class = "wrapper">
   <header class="site-header">
     <nav class="site-nav">
+      <a href="twp-main.html" class="site-logo" aria-label="Trash of the Week home">
+        <img src="../images/logo.svg" alt="Trash of the Week logo">
+      </a>
       <!-- home page -->
       <a href="twp-main.html">Home</a>
 
